--- a/app/src/main/res/layout/item_list_modulos.xml
+++ b/app/src/main/res/layout/item_list_modulos.xml
@@ -36,7 +36,8 @@
                 android:layout_height="wrap_content"
                 android:text="Descripcion "
                 android:layout_marginBottom="15dp"
-                android:layout_marginRight="10dp"/>
+                android:layout_marginRight="10dp"
+                android:textSize="16sp"/>
 
         </LinearLayout>
 
